--- a/app/templates/inventory.html
+++ b/app/templates/inventory.html
@@ -22,8 +22,7 @@
         <td>${{product.price}}</td>
         <td>{{product.quantity}}</td>
         <th> 
-            <a class="btn btn-secondary" href="{{ url_for('inventory.editInventory')}}" role="button">Edit</a>
-            <a class="btn btn-secondary" href="{{ url_for('inventory.deleteInventory')}}" role="button">Delete</a>
+            <a class="btn btn-secondary" href="{{ url_for('inventories.editInventory', product_id=product.product_id) }}" role="button">Edit</a>
         </th>
       </tr>
     {% endfor %}
