Implement ability to add new product listing

--- a/app/templates/inventory.html
+++ b/app/templates/inventory.html
@@ -29,5 +29,7 @@
   </tbody>
 </table>
 
+<a class="btn btn-secondary" href="{{ url_for('inventories.addInventory') }}" role="button">Add New Product Listing</a>
+
 
 {% endblock %}
