Added integration variables

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -36,6 +36,9 @@
   <a class="btn btn-secondary" href="{{ url_for('users.userReviews') }}" role="button">User Reviews</a>
   <a class="btn btn-secondary" href="{{ url_for('users.sellerReviews') }}" role="button">Seller Reviews</a>
   <a class="btn btn-secondary" href="{{ url_for('users.productReviews') }}" role="button">Product Reviews</a>
+  <a class="btn btn-secondary" href="{{ url_for('users.submitProductReview') }}" role="button">Submit Product Review</a>
+  <a class="btn btn-secondary" href="{{ url_for('users.submitSellerReview') }}" role="button">Submit Seller Review</a>
+
 </form>
 
 {% endblock %}
