--- a/app/templates/productSummaryReviews.html
+++ b/app/templates/productSummaryReviews.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <br><br>
-<h2>Summary of Reviews for Product:</h2>
+<h2>Summary of Reviews for Product with ID 5 (CHANGE)</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
