--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -15,7 +15,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for item in cart_items%}
+      {% for item in items%}
         <tr>
           <th scope="row">{{item.product_name}}</th>
           <td>{{item.product_image}}</td>
@@ -27,5 +27,10 @@
       {% endfor %}
     </tbody>
   </table>
+
+  <form method="post" action="">
+    {{ form.hidden_tag() }}
+    <p>{{ form.submit() }}</p>
+  </form>
   
 {% endblock %}
