Fixed bug with purchasing cart using info from data generator

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -8,7 +8,7 @@
       <tr>
         <th scope="col">Product Name</th>
         <th scope="col">Image</th>
-        <th scope="col">Seller Name</th>
+        <th scope="col">Seller ID</th>
         <th scope="col">Quantity</th>
         <th scope="col">Unit Price</th>
         <th scope="col">Total Price</th>
