--- a/app/templates/userReviews.html
+++ b/app/templates/userReviews.html
@@ -3,21 +3,25 @@
 {% block content %}
 
 <br><br>
-
+<h1> User reviews for user with ID 5</h1>
 <h2>User Reviews for Products:</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
+      <th scope="col">Upvotes</th>
       <th scope="col">Product ID</th>
       <th scope="col">Number of Stars</th>
       <th scope="col">Date</th>
       <th scope="col">Review</th>
+      <th scope="col">Images</th>
 
     </tr>
   </thead>
   <tbody>
     {% for product_review in userProductReviews%}
       <tr>
+        <th scope="row">{{product_review.upvotes}}</th>
+        <input type="hidden" name="upvotes" value="{{product_review.upvotes}}" /> 
         <th scope="row">{{product_review.product_id}}</th>
         <input type="hidden" name="product_id" value="{{product_review.product_id}}" />
         <td>{{product_review.num_stars}}</td>
@@ -26,6 +30,8 @@
         <input type="hidden" name="date" value="{{product_review.date}}" />
         <td>{{product_review.description}}</td>
         <input type="hidden" name="description" value="{{product_review.description}}" />
+        <td>{{product_review.images}}</td>
+        <input type="hidden" name="images" value="{{product_review.images}}" />
         <th> <a class="btn btn-secondary" href="{{ url_for('users.editProductReview', id = product_review["product_id"])}}" role="button">Edit</a></th>
         <th> <a class="btn btn-secondary" href="{{ url_for('users.deleteProductReview', id = product_review["product_id"])}}" role="button">Delete</a></th>
       </tr>
@@ -37,16 +43,20 @@
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
+      <th scope="col">Upvotes</th>
       <th scope="col">Seller ID</th>
       <th scope="col">Number of Stars</th>
       <th scope="col">Date</th>
       <th scope="col">Review</th>
+      <th scope="col">Images</th>
 
     </tr>
   </thead>
   <tbody>
     {% for seller_review in userSellerReviews%}
       <tr>
+        <th scope="row">{{seller_review.upvotes}}</th>
+        <input type="hidden" name="upvotes" value="{{seller_review.upvotes}}" />
         <th scope="row">{{seller_review.seller_id}}</th>
         <input type="hidden" name="seller_id" value="{{seller_review.seller_id}}" />
         <td>{{seller_review.num_stars}}</td>
@@ -55,8 +65,10 @@
         <input type="hidden" name="date" value="{{seller_review.date}}" />
         <td>{{seller_review.description}}</td>
         <input type="hidden" name="description" value="{{seller_review.description}}" />
+        <td>{{seller_review.images}}</td>
+        <input type="hidden" name="images" value="{{seller_review.images}}" />
         <th> <a class="btn btn-secondary" href="{{ url_for('users.editSellerReview', id = seller_review["seller_id"])}}" role="button">Edit</a></th>
-        <th> <a class="btn btn-secondary" href="{{ url_for('users.deleteProductReview', id = seller_review["seller_id"])}}" role="button">Delete</a></th>
+        <th> <a class="btn btn-secondary" href="{{ url_for('users.deleteSellerReview', id = seller_review["seller_id"])}}" role="button">Delete</a></th>
       </tr>
     {% endfor %}
   </tbody>
