--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -20,7 +20,7 @@
         {% for item in product%}
             <tr>
                 <th scope="row">{{item.name}}</th>
-                <td>{{item.image}}</td>
+                <td><img src="{{item.image}}" alt="User Image Not Found"></td>
                 <td>{{item.owner_id}}</td>
                 <td>{{item.product_id}}</td>
                 <td>{{item.description}}</td>
