standardized image sizing when rendering

--- a/app/templates/productSearch.html
+++ b/app/templates/productSearch.html
@@ -17,7 +17,7 @@
         {% for item in product%}
             <tr>
                 <th scope="row">{{item.name}}</th>
-                <td><img src="{{item.image}}" alt="User Image Not Found"></td>
+                <td><img src="{{item.image}}" alt="User Image Not Found" width="120" height="90"></td>
                 <td>{{item.product_id}}</td>
                 <td>{{item.description}}</td>
                 <td>{{item.category}}</td>
