--- a/app/templates/productSearch.html
+++ b/app/templates/productSearch.html
@@ -3,6 +3,8 @@
 {% block content %}
 
     <h1>Product Search</h1>
+    {{pagination.info}}
+    {{pagination.links}}
     <table class='table table-hover table-bordered container'>
         <thead class="thead-dark">
         <tr>
@@ -25,5 +27,7 @@
         {% endfor %}
         </tbody>
     </table>
+    {{pagination.links}}
+
 
 {% endblock %}
