--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,10 @@
   <div class="sidenav">
     {% block msg %}
       <h1 style="color:aliceblue">Welcome to CompSci 316 Mini Amazon!</h1>
+        <form action="{{ url_for('productSearchInput.handle_search') }}" method="post">
+            <input type="text" name="search_criteria">
+            <input type="submit">
+        </form>
       <div style="color: aliceblue; text-align: right; margin-bottom: 25px">
         {% if current_user.is_authenticated %}
           Hello {{current_user.firstname}}! <a href="{{ url_for('users.logout') }}" type="button" class="btn btn-light">Log out</a>
