accounts files, buggy

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,15 +10,15 @@
     <tr>
       <th scope="col">Product ID</th>
       <th scope="col">Product Name</th>
-      <th scope="col">Price</th>
+      <th scope="col">Category</th>
     </tr>
   </thead>
   <tbody>
     {% for product in avail_products%}
       <tr>
-        <th scope="row">{{product.id}}</th>
+        <th scope="row">{{product.product_id}}</th>
         <td>{{product.name}}</td>
-        <td>{{product.price}}</td>
+        <td>{{product.category}}</td>
       </tr>
     {% endfor %}
   </tbody>
