--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -21,9 +21,16 @@
     {% endfor %}
   </p>
   <p>
-    {{ form.email.label }} (Could be fake email address)<br/>
+    {{ form.email.label }} (Can be a made-up email)<br/>
     {{ form.email(size=64) }}<br/>
     {% for error in form.email.errors %}
+    <span style="color: red;">[{{ error }}]</span>
+    {% endfor %}
+  </p>
+  <p>
+    {{ form.address.label }} (Can be a made-up address)<br/>
+    {{ form.address(size=64) }}<br/>
+    {% for error in form.address.errors %}
     <span style="color: red;">[{{ error }}]</span>
     {% endfor %}
   </p>
