--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
   <tbody>
     {% for product in avail_products%}
       <tr>
-        <th scope="row">{{product.id}}</th>
+        <th scope="row">{{product.product_id}}</th>
         <td>{{product.name}}</td>
         <td>{{product.price}}</td>
       </tr>
