Implemented saved for later and cart

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -8,55 +8,45 @@
       <tr>
         <th scope="col">Product Name</th>
         <th scope="col">Image</th>
-        <th scope="col">Seller ID</th>
+        <th scope="col">Seller Name</th>
         <th scope="col">Quantity</th>
         <th scope="col">Unit Price</th>
         <th scope="col">Total Price</th>
+        <th scope="col">Mark As Saved for Later</th>
+        <th scope="col">Number to Mark</th>
+        <th scope="col">Update Quantity</th>
+        <th scope="col">New Quantity</th>
+        <th scope="col">Delete</th>
       </tr>
     </thead>
-    <tbody>
-      {% for item in immediate_cart%}
-        <tr>
-          <th scope="row">{{item.product_name}}</th>
-          <td>{{item.product_image}}</td>
-          <td>{{item.seller_name}}</td>
-          <td>{{item.quantity}}</td>
-          <td>{{item.unit_price}}</td>
-          <td>{{item.total_price}}</td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-
-  <form method="post" action="">
-    {{ purchase_form.hidden_tag() }}
-    <p>{{ purchase_form.submit() }}</p>
-  </form>
-
-  <h1>Saved For Later</h1>
-  <table class='table table-hover table-bordered container'>
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">Product Name</th>
-        <th scope="col">Image</th>
-        <th scope="col">Seller ID</th>
-        <th scope="col">Quantity</th>
-        <th scope="col">Unit Price</th>
-        <th scope="col">Total Price</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for item in saved_for_later_cart%}
-        <tr>
-          <th scope="row">{{item.product_name}}</th>
-          <td>{{item.product_image}}</td>
-          <td>{{item.seller_name}}</td>
-          <td>{{item.quantity}}</td>
-          <td>{{item.unit_price}}</td>
-          <td>{{item.total_price}}</td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+    <form method="post" action="">
+      <tbody>
+        {% for item in cart%}
+          <tr>
+            <th scope="row">{{item.product_name}}</th>
+            <td><img src="{{item.product_image}}" alt="Image Not Found" height="100"></td>
+            <td>{{item.seller_name}}</td>
+            <td>{{item.quantity}}</td>
+            <td>{{item.unit_price}}</td>
+            <td>{{item.total_price}}</td>
   
+            <td><input type="checkbox" name="move_to_saved" value="{{item.product_id}},{{item.seller_id}},{{item.quantity}},move"></td>
+            <td><input style="width:100px" type="number" min="1" max={{item.quantity}} name="{{item.product_id}},{{item.seller_id}},{{item.quantity}},move"></td>
+  
+            <td><input type="checkbox" name="update_quantity" value="{{item.product_id}},{{item.seller_id}},quantity"></td>
+            <td><input style="width:100px" type="number" min="1" name="{{item.product_id}},{{item.seller_id}},quantity"></td>
+  
+            <td><input type="checkbox" name="delete_from_cart" value={{item.product_id}},{{item.seller_id}},delete></td>
+  
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+
+      <input type="submit" name="type" value="Purchase Cart">
+      <input type="submit" name="type" value="Move Items to Saved">
+      <input type="submit" name="type" value="Update Quantities">
+      <input type="submit" name="type" value="Delete Items">
+  
+    </form>  
 {% endblock %}
