Total cart cost implemented

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -43,6 +43,8 @@
       </tbody>
     </table>
 
+      <h3>Total Cost: {{total_cost}}</h3>
+
       <input type="submit" name="type" value="Purchase Cart">
       <input type="submit" name="type" value="Move Items to Saved">
       <input type="submit" name="type" value="Update Quantities">
