Began implementing balance check on cart

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 
+<div class="alert alert-primary" role="alert">
+  <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+  This is a primary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+</div>
+
 <h1>Cart</h1>
 <table class='table table-hover table-bordered container'>
     <thead class="thead-dark">
