--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,10 @@
             <input type="text" name="search_criteria">
             <input type="submit">
         </form>
+        <a href="{{ url_for("productSearchCategory.productViewCategories") }}"><input type="submit" name="go_to_product_button" value="Search By Category"rel="tooltip" class="btn btn-info">
+            <i class="material-icons"></i>
+            </input>
+        </a>
       <div style="color: aliceblue; text-align: right; margin-bottom: 25px">
         {% if current_user.is_authenticated %}
           Hello {{current_user.firstname}}! <a href="{{ url_for('users.logout') }}" type="button" class="btn btn-light">Log out</a>
