added commenting for all methods

--- a/app/templates/newProduct.html
+++ b/app/templates/newProduct.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <h1>Add New Product</h1>
+{#    Form to insert all necessary information to add a new product.#}
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
