--- a/app/templates/productSearch.html
+++ b/app/templates/productSearch.html
@@ -5,6 +5,7 @@
     <h1>Product Search</h1>
     {{pagination.info}}
     {{pagination.links}}
+{#    A table containing all of the necessary information to display all products based on the search.#}
     <table class='table table-hover table-bordered container'>
         <thead class="thead-dark">
         <tr>
