--- a/app/templates/productViewCategories.html
+++ b/app/templates/productViewCategories.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <h1>Product Categories</h1>
+{#    Buttons to search for products based on categories.#}
     <a href="{{ url_for("productSearchCategory.product", input="tech") }}"><input type="submit" name="Tech" value="Tech" rel="tooltip" class="btn btn-info">
         <i class="material-icons"></i>
         </input>
