--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <h1>Product</h1>
+{#    Buttons to sort the products#}
     <td class="td-actions text-right">
         <a href="{{ url_for("product.product_price_sort", input=product.product_id) }}"><input type="submit" name="Sort by Price" value="Sort By Price"rel="tooltip" class="btn btn-info">
             <i class="material-icons"></i>
@@ -23,6 +24,7 @@
     </td>
     {{pagination.info}}
     {{pagination.links}}
+{#    A table containing all of the necessary information to display the product.#}
     <table class='table table-hover table-bordered container'>
         <thead class="thead-dark">
         <tr>
