--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -2,12 +2,13 @@
 
 {% block content %}
 
-<div class="alert alert-primary" role="alert">
-  <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-  This is a primary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-</div>
-
 <h1>Cart</h1>
+
+{% for message in get_flashed_messages() %}
+        <p>{{ message }}</p>
+{% endfor %}
+
+<!-- Table to show cart. -->
 <table class='table table-hover table-bordered container'>
     <thead class="thead-dark">
       <tr>
