Start oirder fulfillment

--- a/app/templates/inventory.html
+++ b/app/templates/inventory.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <br><br>
-<h2>Product Inventory</h2>
+<h2>My Product Inventory</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
