--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -24,6 +24,12 @@
     </td>
     {{pagination.info}}
     {{pagination.links}}
+
+    {% for message in get_flashed_messages() %}
+        <p>{{ message }}</p>
+    {% endfor %}
+
+
 {#    A table containing all of the necessary information to display the product.#}
     <table class='table table-hover table-bordered container'>
         <thead class="thead-dark">
@@ -36,24 +42,38 @@
             <th scope="col">Category</th>
             <th scope="col">Price</th>
             <th scope="col">Quantity Available</th>
+            <th scope="col">Add to Cart?</th>
+            <th scope="col">Save for Later?</th>
+            <th scope="col">Quantity</th>
+
         </tr>
         </thead>
         <tbody>
-        {% for item in product%}
-            <tr>
-                <th scope="row">{{item.name}}</th>
-                <td><img src="{{item.image}}" alt="User Image Not Found" width="120" height="90"></td>
-                <td>{{item.owner_id}}</td>
-                <td>{{item.product_id}}</td>
-                <td>{{item.description}}</td>
-                <td>{{item.category}}</td>
-                <td>{{item.price}}</td>
-                <td>{{item.quantity}}</td>
-            </tr>
-        {% endfor %}
+            <form method="post" action="">
+                {% for item in product%}
+                    <tr>
+                        <th scope="row">{{item.name}}</th>
+                        <td><img src="{{item.image}}" alt="User Image Not Found" width="120" height="90"></td>
+                        <td>{{item.owner_id}}</td>
+                        <td>{{item.product_id}}</td>
+                        <td>{{item.description}}</td>
+                        <td>{{item.category}}</td>
+                        <td>{{item.price}}</td>
+                        <td>{{item.quantity}}</td>
+
+                        <td><input type="submit" name="add,{{item.product_id}},{{item.owner_id}}" value="Add"></td>
+                        <td><input type="submit" name="save,{{item.product_id}},{{item.owner_id}}" value="Save"></td>
+                        <td><input style="width:100px" type="number" min="1" max="{{item.quantity}}" name="quantity,{{item.product_id}},{{item.owner_id}}"></td>
+        
+                    </tr>
+                {% endfor %}
+            </form>
         </tbody>
     </table>
     {{pagination.links}}
+
+
+
 
 
 {% endblock %}
