--- a/app/templates/orderFulfillments.html
+++ b/app/templates/orderFulfillments.html
@@ -10,7 +10,7 @@
       <th scope="col">Order ID</th>
       <th scope="col">Buyer Name</th>
       <th scope="col">Buyer Address</th>
-      <th scope="col">Item Quantity</th>
+      <th scope="col">Total Quantity</th>
       <th scope="col">Date</th>
       <th scope="col">Status</th>
     </tr>
