working on purchase history

--- a/app/templates/productViewCategories.html
+++ b/app/templates/productViewCategories.html
@@ -4,31 +4,35 @@
 
     <h1>Product Categories</h1>
 {#    Buttons to search for products based on categories.#}
-    <a href="{{ url_for("productSearchCategory.product", input="tech") }}"><input type="submit" name="Tech" value="Tech" rel="tooltip" class="btn btn-info">
+    <a href="{{ url_for("productSearchCategory.product", input="Tech") }}"><input type="submit" name="Tech" value="Tech" rel="tooltip" class="btn btn-info">
         <i class="material-icons"></i>
         </input>
     </a>
-    <a href="{{ url_for("productSearchCategory.product", input="books") }}"><input type="submit" name="Books" value="Books" rel="tooltip" class="btn btn-info">
+    <a href="{{ url_for("productSearchCategory.product", input="Books") }}"><input type="submit" name="Books" value="Books" rel="tooltip" class="btn btn-info">
         <i class="material-icons"></i>
         </input>
     </a>
-    <a href="{{ url_for("productSearchCategory.product", input="kitchen") }}"><input type="submit" name="Kitchen" value="Kitchen" rel="tooltip" class="btn btn-info">
+    <a href="{{ url_for("productSearchCategory.product", input="Kitchen") }}"><input type="submit" name="Kitchen" value="Kitchen" rel="tooltip" class="btn btn-info">
         <i class="material-icons"></i>
         </input>
     </a>
-    <a href="{{ url_for("productSearchCategory.product", input="appliances") }}"><input type="submit" name="Appliances" value="Appliances" rel="tooltip" class="btn btn-info">
+    <a href="{{ url_for("productSearchCategory.product", input="Appliances") }}"><input type="submit" name="Appliances" value="Appliances" rel="tooltip" class="btn btn-info">
         <i class="material-icons"></i>
         </input>
     </a>
-    <a href="{{ url_for("productSearchCategory.product", input="outdoors") }}"><input type="submit" name="Outdoors" value="Outdoors" rel="tooltip" class="btn btn-info">
+    <a href="{{ url_for("productSearchCategory.product", input="Outdoors") }}"><input type="submit" name="Outdoors" value="Outdoors" rel="tooltip" class="btn btn-info">
         <i class="material-icons"></i>
         </input>
     </a>
-    <a href="{{ url_for("productSearchCategory.product", input="toys") }}"><input type="submit" name="Toys" value="Toys" rel="tooltip" class="btn btn-info">
+    <a href="{{ url_for("productSearchCategory.product", input="Toys") }}"><input type="submit" name="Toys" value="Toys" rel="tooltip" class="btn btn-info">
         <i class="material-icons"></i>
         </input>
     </a>
-    <a href="{{ url_for("productSearchCategory.product", input="wind") }}"><input type="submit" name="Wind" value="Wind" rel="tooltip" class="btn btn-info">
+    <a href="{{ url_for("productSearchCategory.product", input="Wind") }}"><input type="submit" name="Wind" value="Wind" rel="tooltip" class="btn btn-info">
+        <i class="material-icons"></i>
+        </input>
+    </a>
+    <a href="{{ url_for("productSearchCategory.product", input="Clothes") }}"><input type="submit" name="Clothes" value="Clothes" rel="tooltip" class="btn btn-info">
         <i class="material-icons"></i>
         </input>
     </a>
